feat(mc): port to 1.21.5-pre2