@@ -11,6 +11,7 @@ import net.fabricmc.api.ClientModInitializer;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.tooltip.OrderedTextTooltipComponent;
 import net.minecraft.entity.EntityType;
+import net.minecraft.entity.EquipmentSlot;
 import net.minecraft.item.*;
 import net.minecraft.util.Identifier;
 import org.slf4j.Logger;
@@ -25,12 +26,21 @@ public class EnhancedTooltips implements ClientModInitializer {
         new TooltipModule().load();
 
         TooltipComponentAPI.EVENT.register((list, stack) -> {
-            list.remove(0);
+            if (list.isEmpty()) return;
+
+            list.removeFirst();
             list.add(0, new HeaderTooltipComponent(stack));
 
             list.add(1, new FoodTooltipComponent(stack));
 
-            if (stack.getItem() instanceof ArmorItem || stack.getItem() instanceof EntityBucketItem || stack.getItem() instanceof SpawnEggItem) {
+            //? if >1.21.4 {
+            if (ModelViewerTooltipComponent.getEquipmentSlot(stack).getType() == EquipmentSlot.Type.HUMANOID_ARMOR ||
+            //?} else {
+            /*if (stack.getItem() instanceof ArmorItem ||
+            *///?}
+                stack.getItem() instanceof EntityBucketItem ||
+                stack.getItem() instanceof SpawnEggItem
+            ) {
                 list.add(new ModelViewerTooltipComponent(stack));
             } else {
                 list.add(new TooltipBorderColorComponent(stack));
